chore(pubspec): add dependencies for UI, date picker, networking, and localization

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,17 @@ dependencies:
   cupertino_icons: ^1.0.6
   get: ^4.7.2
   flutter_screenutil:
-
+  flutter_svg: ^2.1.0
+  cached_network_image: ^3.4.1
+  flutter_spinkit: ^5.2.1
+  # toastification:
+  dartz:
+  dio:
+  flutter_localization:
+  flutter_localizations:
+    sdk: flutter
+  calendar_date_picker2: ^1.0.2
+  syncfusion_flutter_datepicker: ^27.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -77,9 +87,9 @@ flutter:
   fonts:
     - family: Montserrat
       fonts:
-        - asset: lib/resources/assets/fonts/monserrat/Montserrat-Medium.ttf
+        - asset: lib/resources/assets/fonts/montserrat/Montserrat-Medium.ttf
           weight: 500
-        - asset: lib/resources/assets/fonts/monserrat/Montserrat-Bold.ttf
+        - asset: lib/resources/assets/fonts/montserrat/Montserrat-Bold.ttf
           weight: 700
     - family: OpenSans
       fonts:
