--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
     sdk: flutter
   calendar_date_picker2: ^1.0.2
   syncfusion_flutter_datepicker: ^27.2.3
+  get_it: ^8.0.3
+  intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
