--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   syncfusion_flutter_datepicker: ^27.2.3
   get_it: ^8.0.3
   intl: ^0.19.0
+  flutter_pdfview: ^1.4.0+1
+  path_provider: ^2.1.5
+  path: ^1.9.0
+  http: ^1.4.0
+  permission_handler: ^11.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
