--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  firebase_core:
+  firebase_remote_config: ^3.0.9
   cupertino_icons: ^1.0.6
   get: ^4.7.2
   flutter_screenutil:
   flutter_svg: ^2.1.0
   cached_network_image: ^3.4.1
   flutter_spinkit: ^5.2.1
+  flutter_launcher_icons:
   # toastification:
   dartz:
   dio:
@@ -49,26 +50,24 @@ dependencies:
   syncfusion_flutter_datepicker: ^27.2.3
   get_it: ^8.0.3
   intl: ^0.19.0
-  flutter_pdfview: ^1.4.0+1
+  # flutter_pdfview: ^1.3.0
   path_provider: ^2.1.5
   path: ^1.9.0
   http: ^1.4.0
   permission_handler: ^11.3.1
+  syncfusion_flutter_pdfviewer: ^27.2.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 23
 
-# The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
